--- a/index.html
+++ b/index.html
@@ -14,25 +14,49 @@
         <nav>
             <div class="container">
                 <div class="nav">
-                    <ul class="nav__list">
-                        <li class="nav__list--item">
-                            <a href="#"><img class="logo" src="./imges/scoot.svg" alt="logo"></a>
-                        </li>
-                        <li class="nav__list--item">
-                            <a href="#">About</a>
-                        </li>
-                        <li class="nav__list--item">
-                            <a href="#">Location</a>
-                        </li>
-                        <li class="nav__list--item">
-                            <a href="#">Careers</a>
-                        </li>
-                    </ul>
+
+                    <div class="list">
+
+                        <div class="list__img"><img class="list__burger" src="./imges/burger.svg" alt="logo">
+
+                            <img src="./imges/scoot.svg" alt="logo" class="list__logo"></div>
+                        <ul class="nav__list">
+                            <li class="nav__list--item">
+                                <a href="#">About</a>
+                            </li>
+                            <li class="nav__list--item">
+                                <a href="#">Location</a>
+                            </li>
+                            <li class="nav__list--item">
+                                <a href="#">Careers</a>
+                            </li>
+                        </ul>
+                    </div>
                     <button class="nav__btn">Get Scootin</button>
                 </div>
             </div>
         </nav>
+
     </header>
+    <main class="main">
+        <section class="section1">
+            <div class="container">
+                <div class="hero">
+                    <div class="hero__title">Scooter sharing made simple</div>
+                    <div class="hero__flex">
+                        <img src="./imges/chiziq.svg" alt="chiziq" class="hero__flex--logo">
+                        <div class="p">
+                            <p class="hero__flex--text">Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!</p>
+                            <button class="nav__btn hero__flex--btn">Get Scootin</button>
+                        </div>
+                        <img src="./imges/strelka.svg" alt="chiziq" class="hero__flex--logo1">
+                        <img src="./imges/strelka.svg" alt="chiziq" class="hero__flex--logo2">
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
