--- a/index.html
+++ b/index.html
@@ -56,6 +56,29 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="container">
+                <div class="hero1">
+                    <ul class="hero1__list">
+                        <li class="hero1__list--item">
+                            <img src="./imges/tel.svg" alt="tel">
+                            <h5 class="title">Locate with app</h5>
+                            <p class="text">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </p>
+                        </li>
+                        <li class="hero1__list--item">
+                            <img src="./imges/velek.svg" alt="tel">
+                            <h5 class="title">Pick your scooter</h5>
+                            <p class="text">We show the most important info for the scooters closest to you. So you know how much charge they have left and can see roughly how much it will cost. </p>
+                        </li>
+                        <li class="hero1__list--item">
+                            <img src="./imges/matrol.svg" alt="tel">
+                            <h5 class="title">Enjoy the ride</h5>
+                            <p class="text">Scan the QR code and the bike will unlock. Retract the cable lock, put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility ramps. </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
