--- a/index.html
+++ b/index.html
@@ -59,23 +59,62 @@
         <section>
             <div class="container">
                 <div class="hero1">
+                    <img src="./imges/border.svg" alt="border" class="hero1__logo">
+                    <img src="./imges/border1.svg" alt="border" class="hero1__logo1">
                     <ul class="hero1__list">
                         <li class="hero1__list--item">
                             <img src="./imges/tel.svg" alt="tel">
-                            <h5 class="title">Locate with app</h5>
-                            <p class="text">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </p>
+                            <div class="li">
+                                <h5 class="title">Locate with app</h5>
+                                <p class="text">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </p>
+                            </div>
                         </li>
                         <li class="hero1__list--item">
                             <img src="./imges/velek.svg" alt="tel">
-                            <h5 class="title">Pick your scooter</h5>
-                            <p class="text">We show the most important info for the scooters closest to you. So you know how much charge they have left and can see roughly how much it will cost. </p>
+                            <div class="li">
+                                <h5 class="title">Pick your scooter</h5>
+                                <p class="text">We show the most important info for the scooters closest to you. So you know how much charge they have left and can see roughly how much it will cost. </p>
+                            </div>
                         </li>
                         <li class="hero1__list--item">
                             <img src="./imges/matrol.svg" alt="tel">
-                            <h5 class="title">Enjoy the ride</h5>
-                            <p class="text">Scan the QR code and the bike will unlock. Retract the cable lock, put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility ramps. </p>
+                            <div class="li">
+                                <h5 class="title">Enjoy the ride</h5>
+                                <p class="text">Scan the QR code and the bike will unlock. Retract the cable lock, put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility ramps. </p>
+                            </div>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="hero2">
+                    <ul class="hero2__list">
+                        <li class="hero2__list--item">
+                            <h3 class="item-title1">Easy to use riding telemetry</h3>
+                            <p class="item-text1">The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
+                            <button class="nav__btn">Learn More</button>
+                        </li>
+                        <li class="hero2__list--item">
+                            <img src="./imges/odam.png" alt="odam">
+                        </li>
+                    </ul>
+                    <img src="./imges/hero2strelka.svg" alt="logo" class="hero2__logo">
+                    <img src="./imges/Mask.svg" alt="logo" class="hero2__logo1">
+                    <ul class="hero2__list">
+                        <li class="hero2__list--item">
+                            <img src="./imges/odam.png" alt="odam">
+                        </li>
+                        <li class="hero2__list--item">
+                            <h3 class="item-title1">Easy to use riding telemetry</h3>
+                            <p class="item-text1">The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
+                            <button class="nav__btn">Learn More</button>
+                        </li>
+
+                    </ul>
+                    <img src="./imges/hero2strelka.svg" alt="logo" class="hero2__logo3">
+                    <img src="./imges/Mask.svg" alt="logo" class="hero2__logo4">
                 </div>
             </div>
         </section>
