--- a/index.html
+++ b/index.html
@@ -104,17 +104,30 @@
                     <img src="./imges/Mask.svg" alt="logo" class="hero2__logo1">
                     <ul class="hero2__list">
                         <li class="hero2__list--item">
-                            <img src="./imges/odam.png" alt="odam">
+                            <img src="./imges/hero2bino.png" alt="odam">
                         </li>
                         <li class="hero2__list--item">
-                            <h3 class="item-title1">Easy to use riding telemetry</h3>
-                            <p class="item-text1">The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
+                            <h3 class="item-title1">Coming to a city near you</h3>
+                            <p class="item-text1">Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
                             <button class="nav__btn">Learn More</button>
                         </li>
 
                     </ul>
-                    <img src="./imges/hero2strelka.svg" alt="logo" class="hero2__logo3">
-                    <img src="./imges/Mask.svg" alt="logo" class="hero2__logo4">
+                    <img src="./imges/strelkalogo3.svg" alt="logo" class="hero2__logo3">
+                    <img src="./imges/Masklogo4.svg" alt="logo" class="hero2__logo4">
+                    <ul class="hero2__list">
+
+                        <li class="hero2__list--item">
+                            <h3 class="item-title1">Zero hassle payments</h3>
+                            <p class="item-text1">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
+                            <button class="nav__btn">Learn More</button>
+                        </li>
+                        <li class="hero2__list--item">
+                            <img src="./imges/xamyon.png" alt="odam" class="xamyon">
+                        </li>
+                    </ul>
+                    <img src="./imges/strelka5.svg" alt="logo" class="hero2__logo5">
+                    <img src="./imges/Masklogo6.svg" alt="logo" class="hero2__logo6">
                 </div>
             </div>
         </section>
