hero2 part mobile is over

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
                     <div class="list">
 
-                        <div class="list__img"><img class="list__burger" src="./imges/burger.svg" alt="logo">
+                        <div class="list__img">
+                            <a href="#"><img class="list__burger" src="./imges/burger.svg" alt="logo"></a>
 
-                            <img src="./imges/scoot.svg" alt="logo" class="list__logo"></div>
+                            <a href="#"><img src="./imges/scoot.svg" alt="logo" class="list__logo"></a>
+                        </div>
                         <ul class="nav__list">
                             <li class="nav__list--item">
                                 <a href="#">About</a>
@@ -95,11 +97,13 @@
                             <div class="hero2__list--item">
                                 <h3 class="item-title1">Easy to use riding telemetry</h3>
                                 <p class="item-text1">The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
-                                <button class="nav__btn hero2__bttn">Learn More</button>
+                                <button class=" hero2__bttn1">Learn More</button>
                             </div>
                             <div class="hero2__list--item">
                                 <img src="./imges/odam.png" alt="odam" class="odam">
                                 <img src="./imges/рукщtablet.png" alt="odam" class="odam1">
+                                <img src="./imges/mobaylodamrasm.png" alt="odam" class="odam2">
+                                <img src="./imges/mobayilstrelka.svg" alt="odam" class="odam3">
 
 
                             </div>
@@ -111,11 +115,13 @@
                         <div class="hero2__list--item">
                             <img src="./imges/hero2bino.png" alt="odam" class="bino">
                             <img src="./imges/hero2tabblet.png" alt="odam" class="bino1">
+                            <img src="./imges/binomobali.png" alt="odam" class="bino2">
+                            <img src="./imges/binostrelka.svg" alt="odam" class="bino3">
                         </div>
                         <div class="hero2__list--item">
                             <h3 class="item-title1 titi">Coming to a city near you</h3>
                             <p class="item-text1">Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
-                            <button class="nav__btn hero2__bttn">Learn More</button>
+                            <button class=" hero2__bttn1">Learn More</button>
                         </div>
 
                     </div>
@@ -127,11 +133,13 @@
                             <div class="hero2__list--item">
                                 <h3 class="item-title1">Zero hassle payments</h3>
                                 <p class="item-text1">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
-                                <button class="nav__btn hero2__bttn">Learn More</button>
+                                <button class="hero2__bttn1">Learn More</button>
                             </div>
                             <div class="hero2__list--item">
                                 <img src="./imges/xamyon.png" alt="odam" class="xamyon">
                                 <img src="./imges/ttttt.png" alt="odam" class="xamyon1">
+                                <img src="./imges/xamyonmobeli.png" alt="odam" class="xamyon2">
+                                <img src="./imges/srtrelkaxamyon.svg" alt="odam" class="xamyon3">
 
                             </div>
                         </div>
