--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
                 </div>
             </div>
         </section>
+        <section class="foooter">
+            <div class="container">
+                <div class="hero3">
+                    <h2 class="hero3__title">Sign up and Scoot off today</h2>
+                    <div class="hero3__right">
+                        <a href="https://www.apple.com/"><img src="./imges/appl.svg" alt="appl"></a>
+                        <a href="https://play.google.com/store/apps?hl=ru&gl=US"><img src="./imges/googleplay.svg" alt="appl"></a>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
 </body>
 
