--- a/index.html
+++ b/index.html
@@ -162,6 +162,37 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="container">
+            <div class="footer">
+                <div class="footer__wrapper">
+                    <img src="./imges/scoot-logo.svg" alt="footer__wrapper--logo" class="footer__wrapper--logo">
+                    <ul class="footer__list">
+                        <li class="footer__list--item">
+                            <a href="#">About</a>
+                        </li>
+                        <li class="footer__list--item">
+                            <a href="#">Location</a>
+                        </li>
+                        <li class="footer__list--item">
+                            <a href="#">Careers</a>
+                        </li>
+                    </ul>
+                </div>
+                <ul class="footer__list1">
+                    <li class="footer__list1--item">
+                        <a href="fecbook"><img src="./imges/facebook.svg" alt="fesbook"></a>
+                    </li>
+                    <li class="footer__list1--item">
+                        <a href="https://twitter.com/?lang=ru"><img src="./imges/twtr.svg" alt="twitter"></a>
+                    </li>
+                    <li class="footer__list1--item">
+                        <a href="https://www.instagram.com/"><img src="./imges/instagram.svg" alt="instagram"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
