--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <a href="https://twitter.com/?lang=ru"><img src="./imges/twtr.svg" alt="twitter"></a>
                     </li>
                     <li class="footer__list1--item">
-                        <a href="https://www.instagram.com/"><img src="./imges/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com/"><img src="./imges/instagram.svg" alt="instagra"></a>
                     </li>
                 </ul>
             </div>
