--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav>
             <div class="container">
                 <div class="nav">
-
+                    <input type="checkbox" id="bur">
                     <div class="list">
 
                         <div class="list__img">
-                            <a href="#"><img class="list__burger" src="./imges/burger.svg" alt="logo"></a>
+                            <label for="bur">   <img class="list__burger" src="./imges/burger.svg" alt="logo"></label>
 
                             <a href="#"><img src="./imges/scoot.svg" alt="logo" class="list__logo"></a>
                         </div>
