23 / 5 000 Tarjima natijalari Tarjimasi I finished unfinished business

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     </header>
     <main class="main">
-        <section class="section1">
+        <section class="section">
             <div class="container">
                 <div class="hero">
-                    <div class="hero__title">Scooter sharing made simple</div>
+                    <h2 class="hero__title">Scooter sharing made simple</h2>
                     <div class="hero__flex">
                         <img src="./imges/chiziq.svg" alt="chiziq" class="hero__flex--logo">
                         <div class="p">
